feat(api): implement RFC 7807 error handling and secure API validation
- Introduce BusinessException and GlobalExceptionHandler for standardized error responses
- Implement RFC 7807 (Problem Details) for API consistency
- Add JWT-based security validation for StudyCase endpoints
- Verify StudyCase-Section relational mapping through integration tests
- Fix authentication token extraction in REST client tests