@@ -1,8 +1,14 @@
 package com.github.steevnprm.personalwebsite.api.studycase;
 
+import com.github.steevnprm.personalwebsite.api.exception.BusinessException;
+import com.github.steevnprm.personalwebsite.api.exception.ErrorCode;
+import com.github.steevnprm.personalwebsite.api.section.SectionResponse;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 @Service
@@ -17,42 +23,53 @@ public class StudyCaseService {
     @Transactional
     public StudyCaseResponse create(StudyCaseCreateRequest request) {
         StudyCaseEntity entity = new StudyCaseEntity();
-
         entity.setTitle(request.getTitle().trim());
         
         StudyCaseEntity saved = studyCaseRepository.save(entity);
         
-        StudyCaseResponse response = new StudyCaseResponse();
-        response.setId(saved.getId());
-        response.setTitle(saved.getTitle());
-        response.setCreatedAt(saved.getCreatedAt());
-        return response;
+        return new StudyCaseResponse(
+                saved.getId(),
+                saved.getTitle(),
+                saved.getCreatedAt(),
+                Collections.emptyList() 
+        );
     }
 
     @Transactional(readOnly = true)
     public StudyCaseResponse getById(UUID id) {
-
         StudyCaseEntity entity = studyCaseRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Study case not found with id: " + id));
+                .orElseThrow(() -> new BusinessException(
+                    ErrorCode.STUDYCASE_NOT_FOUND, 
+                    Map.of("id", id)
+                ));
         
-        StudyCaseResponse response = new StudyCaseResponse();
-        response.setId(entity.getId());
-        response.setTitle(entity.getTitle());
-        response.setCreatedAt(entity.getCreatedAt());
-        response.setSections(List.of()); 
-        return response;
+        List<SectionResponse> sections = entity.getSections() == null ? Collections.emptyList() :
+                entity.getSections().stream()
+                .map(s -> new SectionResponse(
+                        s.getId(), 
+                        s.getSubtitle(), 
+                        s.getContent(), 
+                        s.getPosition()
+                ))
+                .toList();
+        
+        return new StudyCaseResponse(
+                entity.getId(),
+                entity.getTitle(),
+                entity.getCreatedAt(),
+                sections
+        );
     }
 
     @Transactional(readOnly = true)
     public List<StudyCaseResponse> getAll() {
         return studyCaseRepository.findAll().stream()
-                .map(entity -> {
-                    StudyCaseResponse response = new StudyCaseResponse();
-                    response.setId(entity.getId());
-                    response.setTitle(entity.getTitle());
-                    response.setCreatedAt(entity.getCreatedAt());
-                    return response;
-                })
+                .map(entity -> new StudyCaseResponse(
+                    entity.getId(),
+                    entity.getTitle(),
+                    entity.getCreatedAt(),
+                    Collections.emptyList() 
+                ))
                 .toList();
     }
 }
